--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,13 +6,14 @@
 #    By: lkaser <lkaser@student.42.us.org>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/04/20 13:52:57 by lkaser            #+#    #+#              #
-#    Updated: 2018/01/22 13:57:13 by lkaser           ###   ########.fr        #
+#    Updated: 2018/01/25 15:25:48 by lkaser           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 
 NAME = libft.a
 LIST = ft_atoi \
+ft_atof \
 ft_bzero \
 ft_in_range \
 ft_isalnum \
