--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lkaser <lkaser@student.42.us.org>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/04/20 13:52:57 by lkaser            #+#    #+#              #
-#    Updated: 2018/01/31 12:57:12 by lkaser           ###   ########.fr        #
+#    Updated: 2018/02/02 18:12:25 by lkaser           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -92,7 +92,7 @@ SRC = $(addsuffix .c, $(LIST))
 OBJ = $(addsuffix .o, $(LIST))
 
 CPPFLAGS = -I includes
-CFLAGS = -g -Wall -Wextra -Werror
+CFLAGS = -O3 -Wall -Wextra -Werror
 
 all: $(NAME)
 
